--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="banner mx-auto text-center flex flex-col items-center gap-4  h-[] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-[20px]  px-4 sm:px-[60px]">
           <img src="./assets/logo-dark.png" alt="" class="h-[92px] w-[92px]">  
            <h2 class="text-[40px] hf font-bold text-[#ffffff]">Emergency Service Directory</h2>
-           <p class="text-[16px] if text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
+           <p class="text-[16px] hf text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
     </section>
     <!-- service section -->
      <section class=" service  flex flex-col md:flex-row justify-between max-w-[1440px] mx-auto mt-12 px-[40px] gap-[30px] ">
@@ -67,12 +67,12 @@
                 <i id="heart1" class="fa-solid fa-heart"></i>
             </div>
             <div>
-                <h3 class="text-[20px] font-bold ">National Emergency Number</h3>
+                <h3 class="text-[20px] hf font-bold ">National Emergency Number</h3>
             <p class="text-[16px] text-[Gray] mb-5">National Emergency</p>
         </div>
         <div>
             <h1 id="emergency-number" class="text-[32px]  font-bold mt-3">999</h1>
-            <span class="text-[18px] text-[gray]   bg-[#F2F2F2]   px-3 py-2  rounded-[20px] ">All</span>
+            <span class="text-[18px] text-[gray]   bg-[#F2F2F2] hf  px-3 py-2  rounded-[20px] ">All</span>
         </div>
         <div class="flex justify-around gap-4 mt-5">
             <button id="copy-btn1" class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px]  w-[50%]"><i class="fa-solid fa-copy"></i> Copy</button>
@@ -85,12 +85,12 @@
                 <i id="heart2" class="fa-solid fa-heart"></i>
             </div>
             <div>
-                <h3 class="text-[20px] mb-6 font-bold">Police Helpline Number</h3>
+                <h3 class="text-[20px] hf mb-6 font-bold">Police Helpline Number</h3>
             <p class="text-[16px] text-[Gray] mb-5">Police</p>
         </div>
         <div>
             <h1 id="police-number" class="text-[32px]  font-bold mt-3">999</h1>
-            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Police</span>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5 hf  px-3 py-2 rounded-[20px] ">Police</span>
         </div>
         <div class="flex justify-around gap-4 mt-5">
             <button id="copy-btn2" class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px] w-[50%]"><i class="fa-solid fa-copy"></i> Copy</button>
@@ -103,12 +103,12 @@
                 <i id="heart3" class="fa-solid fa-heart"></i>
             </div>
             <div>
-                <h3 class="text-[20px] font-bold mb-6">Fire Service Number</h3>
+                <h3 class="text-[20px] hf font-bold mb-6">Fire Service Number</h3>
             <p class="text-[16px] text-[Gray] mb-5">Fire Service</p>
         </div>
         <div>
             <h1 id="fire-number" class="text-[32px]  font-bold mt-3">999</h1>
-            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Fire</span>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5 hf  px-3 py-2 rounded-[20px] ">Fire</span>
         </div>
         <div class="flex justify-around gap-4 mt-5">
             <button id="copy-btn3" class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px] w-[50%]"><i class="fa-solid fa-copy"></i> Copy</button>
@@ -121,12 +121,12 @@
                 <i id="heart4" class="fa-solid fa-heart"></i>
             </div>
             <div>
-                <h3 class="text-[20px] font-bold mb-6">Ambulance Service</h3>
+                <h3 class="text-[20px] hf font-bold mb-6">Ambulance Service</h3>
             <p class="text-[16px] text-[Gray] mb-5">Ambulance</p>
         </div>
         <div>
             <h1 id="ambulance-number" class="text-[32px]  font-bold">1994-999999</h1>
-            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Health</span>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5 hf  px-3 py-2 rounded-[20px] ">Health</span>
         </div>
         <div class="flex justify-around gap-4 mt-5">
             <button id="copy-btn4" class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px] w-[50%]"><i class="fa-solid fa-copy"></i> Copy</button>
@@ -139,12 +139,12 @@
                 <i id="heart5" class="fa-solid fa-heart"></i>
             </div>
             <div>
-                <h3 class="text-[20px] font-bold mb-6">Women & Child Helpline</h3>
+                <h3 class="text-[20px] hf font-bold mb-6">Women & Child Helpline</h3>
             <p class="text-[16px] text-[Gray] mb-5">Women & Child Helpline</p>
         </div>
         <div>
             <h1 id="women-child-number" class="text-[32px]  font-bold">109</h1>
-            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Help</span>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5 hf  px-3 py-2 rounded-[20px] ">Help</span>
         </div>
         <div class="flex justify-around gap-4 mt-5">
             <button id="copy-btn5" class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px] w-[50%]"><i class="fa-solid fa-copy"></i> Copy</button>
@@ -157,12 +157,12 @@
                 <i id="heart6" class="fa-solid fa-heart"></i>
             </div>
             <div>
-                <h3 class="text-[20px] font-bold mb-7">Anti-Corruption Helpline</h3>
+                <h3 class="text-[20px] hf                                                                                                                         font-bold mb-7">Anti-Corruption Helpline</h3>
             <p class="text-[16px] text-[Gray] mb-5">Anti-Corruption</p>
         </div>
         <div>
             <h1 id="anti-corruption-number" class="text-[32px]  font-bold">106</h1>
-            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Govt.</span>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] hf mb-5  px-3 py-2 rounded-[20px] ">Govt.</span>
         </div>
         <div class="flex justify-around gap-4 mt-5">
             <button id="copy-btn6" class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px] w-[50%]"><i class="fa-solid fa-copy"></i> Copy</button>
@@ -175,12 +175,12 @@
                 <i id="heart7" class="fa-solid fa-heart"></i>
             </div>
             <div>
-                <h3 class="text-[20px] font-bold mb-6">Electricity Helpline</h3>
+                <h3 class="text-[20px] hf font-bold mb-6">Electricity Helpline</h3>
             <p class="text-[16px] text-[Gray] mb-5">Electricity Outage</p>
         </div>
         <div>
             <h1 id="electricity-number" class="text-[32px]  font-bold">16216</h1>
-            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Electricity</span>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5 hf px-3 py-2 rounded-[20px] ">Electricity</span>
         </div>
         <div class="flex justify-around gap-4 mt-5">
             <button id="copy-btn7" class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px] w-[50%]"><i class="fa-solid fa-copy"></i> Copy</button>
@@ -193,12 +193,12 @@
                 <i id="heart8" class="fa-solid fa-heart"></i>
             </div>
             <div>
-                <h3 class="text-[20px] font-bold mb-6">Brac Helpline</h3>
+                <h3 class="text-[20px] hf font-bold mb-6">Brac Helpline</h3>
             <p class="text-[16px] text-[Gray] mb-5">Brac</p>
         </div>
         <div>
             <h1 id="brac-number" class="text-[32px]  font-bold">16445</h1>
-            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">NGO</span>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5 hf px-3 py-2 rounded-[20px] ">NGO</span>
         </div>
         <div class="flex justify-around gap-4 mt-5">
             <button id="copy-btn8" class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px] w-[50%]"><i class="fa-solid fa-copy"></i> Copy</button>
@@ -211,12 +211,12 @@
                 <i id="heart9" class="fa-solid fa-heart"></i>
             </div>
             <div>
-                <h3 class="text-[20px] font-bold">Bangladesh Railway Helpline </h3>
+                <h3 class="text-[20px] hf font-bold">Bangladesh Railway Helpline </h3>
             <p class="text-[16px] text-[Gray] mb-5">Bangladesh Railway</p>
         </div>
         <div>
             <h1 id="bangladesh-railway-number" class="text-[32px]  font-bold">163</h1>
-            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5  px-3 py-2 rounded-[20px] ">Travel</span>
+            <span class="text-[18px] text-[gray]  p-4 bg-[#F2F2F2] mb-5 hf px-3 py-2 rounded-[20px] ">Travel</span>
         </div>
         <div class="flex justify-around gap-4 mt-5" >
             <button id="copy-btn9" class="text-[16px] text-[Gray] p-4 border-2 border-black-300  rounded-[10px] w-[50%]"><i class="fa-solid fa-copy"></i> Copy</button>
