--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 </head>
 <body class="bg-[#F5FFF6]">
     <!-- navber section -->
-   <section class="   navber flex flex-col  sm:flex-row  justify-between bg-[white] h-[] px-[60px]  mt-5">
-    <div class="nav-logo flex gap-5 items-center mb-4">
+   <section class="   navber px-0 flex flex-  sm:flex-row  justify-between bg-[white] h-[] sm:px-[60px]  mt-5">
+    <div class="nav-logo flex gap-1 sm:gap-5 items-center mb-4">
         <img src="./assets/logo.png" alt="" class="h-[50px] w-[50px]" >
-        <h2 class="text-xl font-bold hf text-[#006747]">Emergency <br>Service</h2>
+        <h2 class="text-[20px] sm:text-[32px] font-bold hf text-[#006747] ">Emergency <br>Service</h2>
     </div>
-    <div class="left-nav flex gap-5 items-center mb-4">
+    <div class="left-nav flex gap-1 sm:gap-5 items-center mb-4 ">
         <div class="flex gap-2 px-3 py-2 bg-[#41FF6B1A] rounded-[50px]">
             <p id="heart-count" class="text-[16px] font-semibold"> 0</p>
         <img src="./assets/heart.png" alt="" class="h-[30px] w-[30px]">
@@ -54,11 +54,11 @@
    <!-- banner section -->
     <section class="banner mx-auto text-center flex flex-col items-center gap-4  h-[] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] py-[20px]  px-4 sm:px-[60px]">
           <img src="./assets/logo-dark.png" alt="" class="h-[92px] w-[92px]">  
-           <h2 class="text-[40px] hf font-bold text-[#ffffff]">Emergency Service Directory</h2>
-           <p class="text-[16px] hf text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
+           <h2 class="text-[25px] sm:text-[40px] hf font-bold text-[#ffffff]">Emergency Service Directory</h2>
+           <p class="text-[12px] sm:text-[16px] hf text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p> 
     </section>
     <!-- service section -->
-     <section class=" service  flex flex-col md:flex-row justify-between max-w-[1440px] mx-auto mt-12 px-[40px] gap-[30px] ">
+     <section class=" service  flex flex-col md:flex-row justify-between max-w-[1440px] mx-auto mt-12 px-4 sm:px-[40px] gap-[30px] ">
           <!-- card container -->
         <div class="w-full md:w-[1000px] card-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3  gap-[30px]  ">
             <div class="card h-[] bg-[White] w-[] p-[32px] shadow-lg rounded-[12px]">
